tests/236_Tutorial_deconstructGif_basic.out
Parse error: syntax error, unexpected ';' in /home/github/mkoppanen-imagick/tests/236_Tutorial_deconstructGif_basic.php on line 3